--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -7,7 +7,7 @@
 .btn-success {
     -fx-text-fill: #fff;
     -fx-background-color: #269f42;
-    -fx-border-color: #4cae4c;
+    -fx-border-color: #15C13E;
 }
 .btn {
     -fx-border-width: 1.0px;
