--- a/src/main/resources/FXML/SetCustom.fxml
+++ b/src/main/resources/FXML/SetCustom.fxml
@@ -24,7 +24,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="700.0" prefWidth="1180.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.szmirren.controller.SetSqlAssistController">
+<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="700.0" prefWidth="1180.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.szmirren.controller.SetCustomController">
 	<content>
 		<SplitPane dividerPositions="0.7202380952380952" layoutX="276.0" layoutY="132.0" prefHeight="160.0" prefWidth="888.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<items>
@@ -37,9 +37,10 @@
 						</Label>
 						<TableView fx:id="tblProperty" layoutY="46.0" prefHeight="529.0" prefWidth="778.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="45.0">
 							<columns>
-								<TableColumn fx:id="tdKey" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="275.0" text="key" />
-								<TableColumn fx:id="tdValue" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="275.0" text="value" />
-								<TableColumn fx:id="tdDescribe" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="275.0" text="描述" />
+								<TableColumn fx:id="tdKey" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="205.0" text="key" />
+								<TableColumn fx:id="tdPackageName" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="205.0" text="包名" />
+								<TableColumn fx:id="tdClassName" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="205.0" text="类名" />
+                        <TableColumn fx:id="tdTemplate" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="205.0" text="模板" />
 							</columns>
 						</TableView>
 						<Button fx:id="btnSaveConfig" layoutX="812.0" layoutY="7.0" mnemonicParsing="false" onAction="#onSaveConfig" text="保存配置" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
@@ -53,7 +54,7 @@
 						</Button>
 					</children>
 				</AnchorPane>
-				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+				<AnchorPane fx:id="apRightPane" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
 					<children>
 						<Label fx:id="lblAddCustomProperty" layoutX="6.0" layoutY="45.0" text="添加自定义属性 :" AnchorPane.leftAnchor="6.0" AnchorPane.topAnchor="45.0">
 							<font>
@@ -70,22 +71,22 @@
 								<Font size="14.0" />
 							</font>
 						</TextField>
-						<Label layoutX="4.0" layoutY="117.0" text="value :" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="117.0">
+						<Label fx:id="lblPackageName" layoutX="11.0" layoutY="117.0" text="包名 :" AnchorPane.topAnchor="117.0">
 							<font>
 								<Font size="16.0" />
 							</font>
 						</Label>
-						<TextField fx:id="txtValue" layoutX="60.0" layoutY="114.0" prefHeight="29.0" prefWidth="270.0" promptText="请输入value值" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="114.0">
+						<TextField fx:id="txtPackageName" layoutX="60.0" layoutY="114.0" prefHeight="29.0" prefWidth="248.0" promptText="请输入包名" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="114.0">
 							<font>
 								<Font size="14.0" />
 							</font>
 						</TextField>
-						<Label fx:id="lblDescribe" layoutX="12.0" layoutY="157.0" text="描述 :" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="157.0">
+						<Label fx:id="lblClassName" layoutX="12.0" layoutY="157.0" text="类名 :" AnchorPane.topAnchor="157.0">
 							<font>
 								<Font size="16.0" />
 							</font>
 						</Label>
-						<TextField fx:id="txtDescribe" layoutX="60.0" layoutY="154.0" prefHeight="29.0" prefWidth="270.0" promptText="请输入描述" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="154.0">
+						<TextField fx:id="txtClassName" layoutX="60.0" layoutY="154.0" prefHeight="29.0" prefWidth="248.0" promptText="请输入类名" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="154.0">
 							<font>
 								<Font size="14.0" />
 							</font>
@@ -99,13 +100,6 @@
 								<Font size="14.0" />
 							</font>
 						</Button>
-						<Separator layoutY="244.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="244.0" />
-						<Label fx:id="lblTemplate" layoutX="8.0" layoutY="302.0" text="使用模板 :" AnchorPane.leftAnchor="8.0" AnchorPane.topAnchor="302.0">
-							<font>
-								<Font size="16.0" />
-							</font>
-						</Label>
-						<ComboBox fx:id="cboTemplate" editable="true" layoutX="8.0" layoutY="331.0" prefHeight="30.0" prefWidth="250.0" promptText="请选择或输入模板的名称" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="331.0" />
 						<Button fx:id="btnConfirm" layoutX="77.0" layoutY="596.0" mnemonicParsing="false" onAction="#onConfirm" text="确 定" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="77.0">
 							<styleClass>
 								<String fx:value="btn" />
@@ -130,12 +124,12 @@
 								<Insets bottom="8.0" left="20.0" right="20.0" top="8.0" />
 							</padding>
 						</Button>
+                  <Separator layoutX="66.0" layoutY="243.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
                   <CheckBox fx:id="chkOverrideFile" layoutX="8.0" layoutY="257.0" mnemonicParsing="false" text="如果文件存在则覆盖" AnchorPane.leftAnchor="8.0">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </CheckBox>
-                  <Separator layoutX="17.0" layoutY="291.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
 					</children>
 				</AnchorPane>
 			</items>
