--- a/src/main/resources/FXML/SetSql.fxml
+++ b/src/main/resources/FXML/SetSql.fxml
@@ -169,7 +169,7 @@
 						</Button>
 						<Button fx:id="btnCancel" layoutX="178.0" layoutY="597.0"
 							mnemonicParsing="false" onAction="#onCancel" text="取 消"
-							AnchorPane.bottomAnchor="59.0" AnchorPane.leftAnchor="178.0">
+							AnchorPane.bottomAnchor="59.0">
 							<styleClass>
 								<String fx:value="btn" />
 								<String fx:value="btn-default" />
