--- a/src/main/resources/FXML/Index.fxml
+++ b/src/main/resources/FXML/Index.fxml
@@ -92,7 +92,7 @@
 																		<Font size="16.0" />
 																	</font>
 																</TextField>
-																<TextField fx:id="txtAssistName" disable="true" text="SqlAssit" GridPane.columnIndex="3" GridPane.rowIndex="8">
+																<TextField fx:id="txtAssistName" disable="true" text="SqlAssist" GridPane.columnIndex="3" GridPane.rowIndex="8">
 																	<font>
 																		<Font size="16.0" />
 																	</font>
