--- a/src/main/resources/FXML/SetCustom.fxml
+++ b/src/main/resources/FXML/SetCustom.fxml
@@ -24,26 +24,50 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="700.0" prefWidth="1180.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.szmirren.controller.SetCustomController">
+<ScrollPane fitToHeight="true" fitToWidth="true"
+	prefHeight="700.0" prefWidth="1180.0" stylesheets="@../css/style.css"
+	xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="com.szmirren.controller.SetCustomController">
 	<content>
-		<SplitPane dividerPositions="0.7202380952380952" layoutX="276.0" layoutY="132.0" prefHeight="160.0" prefWidth="888.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+		<SplitPane dividerPositions="0.7202380952380952"
+			layoutX="276.0" layoutY="132.0" prefHeight="160.0" prefWidth="888.0"
+			AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+			AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<items>
-				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="158.0" prefWidth="521.0">
+				<AnchorPane minHeight="0.0" minWidth="0.0"
+					prefHeight="158.0" prefWidth="521.0">
 					<children>
-						<Label fx:id="lblTips" layoutX="8.0" layoutY="13.0" text="提示:如果需要实体类名可以使用{c} , 例如:insert{c}  如果类名为User则结果为:insertUser,{C}=User,{c}=user" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="166.0">
+						<Label fx:id="lblTips" layoutX="8.0" layoutY="13.0"
+							text="提示:如果需要实体类名可以使用{c} , 例如:insert{c}  如果类名为User则结果为:insertUser,{C}=User,{c}=user"
+							AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="166.0">
 							<font>
 								<Font size="14.0" />
 							</font>
 						</Label>
-						<TableView fx:id="tblProperty" layoutY="46.0" prefHeight="529.0" prefWidth="778.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="45.0">
+						<TableView fx:id="tblProperty" layoutY="46.0"
+							prefHeight="529.0" prefWidth="778.0"
+							AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="5.0"
+							AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="45.0">
 							<columns>
-								<TableColumn fx:id="tdKey" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="205.0" text="key" />
-								<TableColumn fx:id="tdPackageName" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="205.0" text="包名" />
-								<TableColumn fx:id="tdClassName" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="205.0" text="类名" />
-                        <TableColumn fx:id="tdTemplate" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="205.0" text="模板" />
+								<TableColumn fx:id="tdKey"
+									maxWidth="1.7976931348623157E308" minWidth="-1.0"
+									prefWidth="205.0" text="key" />
+								<TableColumn fx:id="tdPackageName"
+									maxWidth="1.7976931348623157E308" minWidth="-1.0"
+									prefWidth="205.0" text="包名" />
+								<TableColumn fx:id="tdClassName"
+									maxWidth="1.7976931348623157E308" minWidth="-1.0"
+									prefWidth="205.0" text="类名" />
+								<TableColumn fx:id="tdSuffix" prefWidth="94.0"
+									text="后缀名" />
+								<TableColumn fx:id="tdTemplate"
+									maxWidth="1.7976931348623157E308" minWidth="-1.0"
+									prefWidth="205.0" text="模板" />
 							</columns>
 						</TableView>
-						<Button fx:id="btnSaveConfig" layoutX="812.0" layoutY="7.0" mnemonicParsing="false" onAction="#onSaveConfig" text="保存配置" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
+						<Button fx:id="btnSaveConfig" layoutX="812.0" layoutY="7.0"
+							mnemonicParsing="false" onAction="#onSaveConfig" text="保存配置"
+							AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
 							<font>
 								<Font size="14.0" />
 							</font>
@@ -54,44 +78,63 @@
 						</Button>
 					</children>
 				</AnchorPane>
-				<AnchorPane fx:id="apRightPane" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+				<AnchorPane fx:id="apRightPane" minHeight="0.0"
+					minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
 					<children>
-						<Label fx:id="lblAddCustomProperty" layoutX="6.0" layoutY="45.0" text="添加自定义属性 :" AnchorPane.leftAnchor="6.0" AnchorPane.topAnchor="45.0">
+						<Label fx:id="lblAddCustomProperty" layoutX="6.0"
+							layoutY="45.0" text="添加自定义属性 :" AnchorPane.leftAnchor="6.0"
+							AnchorPane.topAnchor="45.0">
 							<font>
 								<Font size="14.0" />
 							</font>
 						</Label>
-						<Label layoutX="17.0" layoutY="76.0" text="key :" AnchorPane.leftAnchor="17.0" AnchorPane.topAnchor="76.0">
+						<Label layoutX="17.0" layoutY="76.0" text="key :"
+							AnchorPane.leftAnchor="17.0" AnchorPane.topAnchor="76.0">
 							<font>
 								<Font size="16.0" />
 							</font>
 						</Label>
-						<TextField fx:id="txtKey" layoutX="60.0" layoutY="74.0" prefHeight="29.0" prefWidth="270.0" promptText="请输入key值" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="74.0">
+						<TextField fx:id="txtKey" layoutX="60.0" layoutY="74.0"
+							prefHeight="29.0" prefWidth="270.0" promptText="请输入key值"
+							AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="18.0"
+							AnchorPane.topAnchor="74.0">
 							<font>
 								<Font size="14.0" />
 							</font>
 						</TextField>
-						<Label fx:id="lblPackageName" layoutX="11.0" layoutY="117.0" text="包名 :" AnchorPane.topAnchor="117.0">
+						<Label fx:id="lblPackageName" layoutX="11.0" layoutY="117.0"
+							text="包名 :" AnchorPane.topAnchor="117.0">
 							<font>
 								<Font size="16.0" />
 							</font>
 						</Label>
-						<TextField fx:id="txtPackageName" layoutX="60.0" layoutY="114.0" prefHeight="29.0" prefWidth="248.0" promptText="请输入包名" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="114.0">
+						<TextField fx:id="txtPackageName" layoutX="60.0"
+							layoutY="114.0" prefHeight="29.0" prefWidth="248.0"
+							promptText="请输入包名" AnchorPane.rightAnchor="18.0"
+							AnchorPane.topAnchor="114.0">
 							<font>
 								<Font size="14.0" />
 							</font>
 						</TextField>
-						<Label fx:id="lblClassName" layoutX="12.0" layoutY="157.0" text="类名 :" AnchorPane.topAnchor="157.0">
+						<Label fx:id="lblClassName" layoutX="12.0" layoutY="157.0"
+							text="类名 :" AnchorPane.topAnchor="157.0">
 							<font>
 								<Font size="16.0" />
 							</font>
 						</Label>
-						<TextField fx:id="txtClassName" layoutX="60.0" layoutY="154.0" prefHeight="29.0" prefWidth="248.0" promptText="请输入类名" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="154.0">
+						<TextField fx:id="txtClassName" layoutX="60.0"
+							layoutY="154.0" prefHeight="29.0" prefWidth="248.0"
+							promptText="请输入类名" AnchorPane.rightAnchor="18.0"
+							AnchorPane.topAnchor="154.0">
 							<font>
 								<Font size="14.0" />
 							</font>
 						</TextField>
-						<Button fx:id="btnAddProperty" layoutX="100.0" layoutY="199.0" mnemonicParsing="false" onAction="#onAddPropertyToTable" text="添加属性" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="94.0" AnchorPane.topAnchor="199.0">
+						<Button fx:id="btnAddProperty" layoutX="100.0"
+							layoutY="199.0" mnemonicParsing="false"
+							onAction="#onAddPropertyToTable" text="添加属性"
+							AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="94.0"
+							AnchorPane.topAnchor="199.0">
 							<styleClass>
 								<String fx:value="btn" />
 								<String fx:value="btn-executable" />
@@ -100,7 +143,9 @@
 								<Font size="14.0" />
 							</font>
 						</Button>
-						<Button fx:id="btnConfirm" layoutX="77.0" layoutY="596.0" mnemonicParsing="false" onAction="#onConfirm" text="确 定" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="77.0">
+						<Button fx:id="btnConfirm" layoutX="77.0" layoutY="596.0"
+							mnemonicParsing="false" onAction="#onConfirm" text="确 定"
+							AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="77.0">
 							<styleClass>
 								<String fx:value="btn" />
 								<String fx:value="btn-success" />
@@ -112,7 +157,9 @@
 								<Insets bottom="8.0" left="20.0" right="20.0" top="8.0" />
 							</padding>
 						</Button>
-						<Button fx:id="btnCancel" layoutX="178.0" layoutY="597.0" mnemonicParsing="false" onAction="#onCancel" text="取 消" AnchorPane.bottomAnchor="59.0">
+						<Button fx:id="btnCancel" layoutX="178.0" layoutY="597.0"
+							mnemonicParsing="false" onAction="#onCancel" text="取 消"
+							AnchorPane.bottomAnchor="59.0">
 							<styleClass>
 								<String fx:value="btn" />
 								<String fx:value="btn-default" />
@@ -124,12 +171,16 @@
 								<Insets bottom="8.0" left="20.0" right="20.0" top="8.0" />
 							</padding>
 						</Button>
-                  <Separator layoutX="66.0" layoutY="243.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-                  <CheckBox fx:id="chkOverrideFile" layoutX="8.0" layoutY="257.0" mnemonicParsing="false" text="如果文件存在则覆盖" AnchorPane.leftAnchor="8.0">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </CheckBox>
+						<Separator layoutX="66.0" layoutY="243.0"
+							prefWidth="200.0" AnchorPane.leftAnchor="0.0"
+							AnchorPane.rightAnchor="0.0" />
+						<CheckBox fx:id="chkOverrideFile" layoutX="8.0"
+							layoutY="257.0" mnemonicParsing="false" text="如果文件存在则覆盖"
+							AnchorPane.leftAnchor="8.0">
+							<font>
+								<Font size="16.0" />
+							</font>
+						</CheckBox>
 					</children>
 				</AnchorPane>
 			</items>
